apps/base/media/requestrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName requestrr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      containers:
        - image: darkalfx/requestrr:latest@sha256:8e3b41a12e96865b6ad73d87103c592b5e26a45e3aee7a059074aeb4902eb379
          imagePullPolicy: IfNotPresent
          name: requestrr
          ports:
            - containerPort: 4545
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: requestrr/config
      hostname: requestrr
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
