apps/base/media/requestrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestrr-service
spec:
  selector:
    app: requestrr-deployment
  ports:
  - name: http
    port: 4545
    targetPort: 4545
    protocol: TCP
