apps/base/media/requestrr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: requestrr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requestrr.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: requestrr-service
          port: 4545
  tls:
    certResolver: letsencrypt
